<resources>
    <string name="app_name">BloodPressureLog</string>
    <string name="sys_label">SYS</string>
    <string name="dia_label">DIA</string>
    <string name="pulse_label">PULSE</string>
    <string name="sys_hint">SYS, mmHG</string>
    <string name="dia_hint">DIA, mmHg</string>
    <string name="pulse_hint">PULSE, BPM</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="arrhythmia_label">Arrhythmia</string>
    <string name="title_readings">Readings</string>
    <string name="title_charts">Charts</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_info">Info</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="comment_hint">Note</string>
    <string name="dialog_discard">Discard</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_message">Discard changes?</string>
    <string name="delete_dialog_message">Are you sure you want to delete reading?</string>
    <string name="wrong_value">Invalid value</string>
    <string name="arm">Arm</string>
    <string name="arm_right">Right</string>
    <string name="arm_left">Left</string>
    <string name="chart_empty">Not enough data to plot graphs</string>
    <string name="list_empty">Nothing in readings. Add a reading</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="average">Average</string>
    <string name="systolic">SYS</string>
    <string name="diastolic">DIA</string>
    <string name="pulse">Pulse</string>
    <string name="sys_abbreviation">* SYS - systolic blood pressure</string>
    <string name="dia_abbreviation">* DIA - diastolic blood pressure</string>
    <string name="category">Category</string>
    <string name="optimal">Optimal</string>
    <string name="normal">Normal</string>
    <string name="elevated">High normal</string>
    <string name="stage1">Grade 1\nhypertension</string>
    <string name="stage2">Grade 2\nhypertension</string>
    <string name="stage3">Grade 3\nhypertension</string>
    <string name="sys_optimal">&lt; 120</string>
    <string name="dia_optimal">&lt; 80</string>
    <string name="sys_normal">120-129</string>
    <string name="dia_normal">80-84</string>
    <string name="sys_elevated">130-139</string>
    <string name="dia_elevated">85-89</string>
    <string name="sys_stage1">140-159</string>
    <string name="dia_stage1">90-99</string>
    <string name="sys_stage2">160-179</string>
    <string name="dia_stage2">100-109</string>
    <string name="sys_stage3">&gt; 180</string>
    <string name="dia_stage3">&gt; 110</string>
    <string name="and_or">and/or</string>
    <string name="and">and</string>
    <string name="empty">N/a</string>
    <string name="fragment_list_title">Readings</string>
    <string name="fragment_charts_title">Charts</string>
    <string name="fragment_statistics_title">Statistics</string>
    <string name="edit_title">Edit reading</string>
    <string name="new_title">New reading</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
